花火のステージを抽象化しpixi依存を解消

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
       "sourceMap": true,
       "target": "ES5", // TSはECMAScript 5に変換
       "module": "ES2015", // TSのモジュールはES Modulesとして出力
+      "lib": ["ES2019.Array", "DOM"],
       "moduleResolution": "node"
     }
 }
