--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fireworks_ts",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "library which shows fireworks animation.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,18 +9,18 @@
     "watch": "npx webpack -w"
   },
   "keywords": [],
-  "author": "",
+  "author": "Takanori Kusumoto",
   "license": "ISC",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "@typescript-eslint/parser": "^4.28.1",
-    "eslint": "^7.30.0",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2"
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "pixi.js": "^6.0.4"
+    "pixi.js": "^6.3.2"
   }
 }
