--- a/package.json
+++ b/package.json
@@ -21,6 +21,17 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "pixi.js": "^6.3.2"
+    "@pixi/app": "^6.5.2",
+    "@pixi/constants": "^6.5.2",
+    "@pixi/core": "^6.5.2",
+    "@pixi/filter-color-matrix": "^6.5.2",
+    "@pixi/graphics": "^6.5.2",
+    "@pixi/math": "^6.5.2",
+    "@pixi/particle-container": "^6.5.2",
+    "@pixi/runner": "^6.5.2",
+    "@pixi/settings": "^6.5.2",
+    "@pixi/sprite": "^6.5.2",
+    "@pixi/ticker": "^6.5.2",
+    "@pixi/utils": "^6.5.2"
   }
 }
